--- a/CNN_MNIST.ipynb
+++ b/CNN_MNIST.ipynb
@@ -329,10 +329,10 @@
       "metadata": {
         "id": "7mXVWGW52F1-",
         "colab_type": "code",
-        "outputId": "657a1a35-ca29-4e85-b84f-3acb7a743e3a",
+        "outputId": "2c47ac7b-ffbe-47a7-cfc5-b54e71e7881c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 211
+          "height": 228
         }
       },
       "source": [
@@ -359,9 +359,21 @@
             "Epoch 2/3\n",
             "60000/60000 [==============================] - 85s 1ms/step - loss: 0.0780 - acc: 0.9784 - val_loss: 0.0575 - val_acc: 0.9860\n",
             "Epoch 3/3\n",
-            " 3296/60000 [>.............................] - ETA: 1:15 - loss: 0.0484 - acc: 0.9824"
+            "60000/60000 [==============================] - 83s 1ms/step - loss: 0.0663 - acc: 0.9822 - val_loss: 0.0511 - val_acc: 0.9862\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7f4922673cc0>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
         }
       ]
     },
